Added reporting the estimated parameters of all three models

--- a/04_Evaluation_of_probabilistic_forecasts/1_fitting_and_selecting_one_asset.ipynb
+++ b/04_Evaluation_of_probabilistic_forecasts/1_fitting_and_selecting_one_asset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "f90947de-4216-4199-96f0-49e068bc2aa8",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "1eeed586-a667-47bf-a97b-2d19e9543f87",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "3adcd31b-556c-45b6-993d-1f4ef84e523a",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
        "192704    0.46  0.30  0.81  0.25"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "624a1952-dc24-4327-9cc8-05daab61dfc5",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
        "202402    5.06 -0.24 -3.48  0.42"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "9e05fa45-7da3-4fe5-b2cb-c55e551e3509",
    "metadata": {},
    "outputs": [],
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "id": "ea5608b6-a0ae-4744-a028-46a439316ca3",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
        "(690, 360)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "id": "7fb207b2-a751-4b5d-9eab-9819e93a3ab8",
    "metadata": {},
    "outputs": [],
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "id": "9c09bb0f-f201-4b92-8bb5-fa6ee5ae3ea4",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "id": "bae2ec57-dabe-4a7d-b681-903c68f47705",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "id": "d88f4746-5b56-46f4-8335-d472e717a664",
    "metadata": {},
    "outputs": [],
@@ -444,16 +444,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "3514bbf0-24ce-4a00-88a9-cbf31ae6cbb1",
+   "execution_count": 29,
+   "id": "cc1ba259-4eb1-44c7-92bf-ed0fbf0f93fc",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best model: Student t\n",
+      "Model: Normal\n",
+      "Fitted parameters: (0.006507298842362819, 0.05834076858095716)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Model: Normal\")\n",
+    "print(f\"Fitted parameters: {params_normal}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "cc36f75a-f563-48c0-9e1c-d2bc30e600f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: Student t\n",
       "Fitted parameters: (3.4521298217216843, 0.008635493468786549, 0.03801716366296638)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Model: Student t\")\n",
+    "print(f\"Fitted parameters: {params_t}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "05399a4f-17c2-4386-a084-dfa170e8fb2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: Johnson Su\n",
+      "Fitted parameters: (0.2614592414070789, 1.2569885504877325, 0.019828128751912005, 0.04937580596273001)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Model: Johnson Su\")\n",
+    "print(f\"Fitted parameters: {params_johnsonsu}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "5b80ad80-a411-4ec1-8639-214038352d7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best model: Student t\n"
      ]
     }
    ],
@@ -464,7 +523,7 @@
     "                  (crps_johnsonsu, 'Johnson Su', params_johnsonsu)], key=lambda x: x[0])\n",
     "\n",
     "print(f\"Best model: {best_model[1]}\")\n",
-    "print(f\"Fitted parameters: {best_model[2]}\")"
+    "# print(f\"Fitted parameters: {best_model[2]}\")"
    ]
   },
   {
