Adding Newsvendor and VoI material

--- a/06_Portfolio_optimization_and_copulas/2_simple_portfolio_optimization.ipynb
+++ b/06_Portfolio_optimization_and_copulas/2_simple_portfolio_optimization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "7ffcb46e",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "4fe61f84-07c2-46c8-b06e-c3d17f8bf1ac",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "35e6cfae",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "3e64a8ac",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "266badee",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "id": "8b9bf10f",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "id": "5f4294dc",
    "metadata": {
     "scrolled": true
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "id": "52d4c913",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "id": "14e8e7fa",
    "metadata": {},
    "outputs": [
@@ -152,11 +152,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "5bd7969d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal fraction of wealth to invest: 3.312780264627012\n"
+     ]
+    }
+   ],
+   "source": [
+    "risk_aversion = 0\n",
+    "optimal_fraction = optimize_fraction(simulated_returns, risk_aversion)\n",
+    "print(\"Optimal fraction of wealth to invest:\", optimal_fraction)"
+   ]
   },
   {
    "cell_type": "code",
