--- a/06_Portfolio_optimization_and_copulas/7_political_forecasting.ipynb
+++ b/06_Portfolio_optimization_and_copulas/7_political_forecasting.ipynb
@@ -171,7 +171,7 @@
    ],
    "source": [
     "print(\"Point forecast of expected red electoral votes:\",expected_red_electoral_votes)\n",
-    "print(\"Point forecast of expected red electoral votes:\", expected_blue_electoral_votes)"
+    "print(\"Point forecast of expected blue electoral votes:\", expected_blue_electoral_votes)"
    ]
   },
   {
