Adding pyomo environment and the rest of the optimization notebooks

--- a/07_Optimization_of_decision_variables/03_capacity_allocation.ipynb
+++ b/07_Optimization_of_decision_variables/03_capacity_allocation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9a05bec6-590d-4162-b44c-6068bd75b57c",
    "metadata": {},
    "outputs": [],
@@ -14,10 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "adeae584-e966-4f86-8049-e5fc69a8a808",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The optimal protection level to maximize expected revenue is: 46.05316227348681\n"
+     ]
+    }
+   ],
    "source": [
     "# Parameters\n",
     "full_fare_price = 150\n",
@@ -61,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "171fca01",
    "metadata": {},
    "outputs": [
