--- a/07_Optimization_of_decision_variables/04_capacity_allocation_dependent_demands.ipynb
+++ b/07_Optimization_of_decision_variables/04_capacity_allocation_dependent_demands.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "95c2c626-bc57-4385-b98f-5c8bfa2e8fda",
    "metadata": {},
    "outputs": [],
@@ -14,10 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "62d214f0-369a-4599-bdc0-8adbaff46257",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The optimal protection level to maximize expected revenue is: 75.27392784088853\n"
+     ]
+    }
+   ],
    "source": [
     "# Parameters\n",
     "full_fare_price = 150\n",
@@ -65,6 +73,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bfa22cb8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73f1ee3e-4392-4e9e-82b5-8b8a5cdd2eef",
    "metadata": {},
    "outputs": [],
    "source": []
