--- a/07_Optimization_of_decision_variables/05_variable_pricing.ipynb
+++ b/07_Optimization_of_decision_variables/05_variable_pricing.ipynb
@@ -2,21 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a749d077-627b-405f-ba31-1760d749d9b6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyomo.environ import *\n",
-    "np.random.seed(666)"
+    "from pyomo.environ import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "417e5976-9e01-4dc5-a9ba-a37b0c890510",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimized p: 25\n",
+      "Optimized x values: [1000, 226, 380, 440, 659, 1000, 1000]\n",
+      "Maximal value of the objective: 119919\n"
+     ]
+    }
+   ],
    "source": [
     "# Parameters\n",
     "C = 1000\n",
@@ -50,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "949461a1",
    "metadata": {},
    "outputs": [
@@ -200,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
