cleaned decimals presentations

--- a/07_Optimization_of_decision_variables/07_overbooking.ipynb
+++ b/07_Optimization_of_decision_variables/07_overbooking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "57a65218-6a17-4d26-aec2-863ee03a807b",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4afadc8a-a004-4970-8f0e-9974e30af46f",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "29a0d5e3-b508-4d29-a9a9-ff85e39d241b",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "297ef0a6-97bd-43d5-9bb2-0184667d5bd0",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "a465629a",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
      "output_type": "stream",
      "text": [
       "Optimal price: $87\n",
-      "Optimal number of reservations: 166\n"
+      "Optimal number of reservations: 165\n"
      ]
     }
    ],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "369dacb4",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
     "def profit_fixed_reservations(price):\n",
     "    # reservations are fixed at capacity\n",
     "    reservations = CAPACITY\n",
-    "    return profit(price, reservations)\n",
+    "    return mean_profit(price, reservations)\n",
     "\n",
     "# The objective function to minimize with fixed reservations\n",
     "def objective_fixed_reservations(x):\n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "89a12782",
    "metadata": {},
    "outputs": [
@@ -159,63 +159,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "a1a2c69a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1201.4736214549644"
+       "1175"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mean_profit(87, 166)"
+    "round(mean_profit(87, 166))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "6760d1e1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "377.54255827099115"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mean_profit(87, 150)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "03cb4601",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "525.7797299773905"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mean_profit(89, 150)"
    ]
@@ -245,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
