--- a/07_Optimization_of_decision_variables/09_Markdown_management_random.ipynb
+++ b/07_Optimization_of_decision_variables/09_Markdown_management_random.ipynb
@@ -3,7 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ad8b83a4",
+   "id": "d06de1a5-b1a0-4984-9a51-ff5657525945",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.optimize import minimize\n",
+    "np.random.seed(666)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b380a0a7-fdbf-4712-9f18-a05ba2116127",
    "metadata": {},
    "outputs": [
     {
@@ -11,14 +23,11 @@
      "output_type": "stream",
      "text": [
       "The optimal price is: 42.44\n",
-      "The maximum expected revenue is: 2902.97\n"
+      "The maximum expected revenue is: 2902.92\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "from scipy.optimize import minimize\n",
-    "\n",
     "# Initial inventory\n",
     "x = 160 \n",
     "\n",
@@ -54,7 +63,7 @@
     "res = minimize(total_revenue, 30, bounds=[(0, 120/1.5)])\n",
     "\n",
     "print('The optimal price is:', round(res.x[0], 2))\n",
-    "print('The maximum expected revenue is:', round(-res.fun, 2))\n"
+    "print('The maximum expected revenue is:', round(-res.fun, 2))"
    ]
   },
   {
@@ -235,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
