--- a/07_Optimization_of_decision_variables/05_variable_pricing.ipynb
+++ b/07_Optimization_of_decision_variables/05_variable_pricing.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Use the pyomo_env.yml to create a Conda environment for running this Notebook\n",
     "from pyomo.environ import *"
    ]
   },
@@ -209,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
